[gd_scene load_steps=8 format=3 uid="uid://cbc65rwts4j7e"]

[ext_resource type="Script" path="res://drops/wood_drop.gd" id="1_c6iyp"]
[ext_resource type="Texture2D" uid="uid://drwaei8svgkiq" path="res://imgs/wood_drop.png" id="2_2r10a"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bgbcu"]

[sub_resource type="Animation" id="Animation_i2nv5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("wood_sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_1u4g2"]
resource_name = "idle"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("wood_sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1), Vector2(0, 0), Vector2(0, 1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_6b48i"]
resource_name = "start"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("wood_sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -5), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8wp76"]
_data = {
"RESET": SubResource("Animation_i2nv5"),
"idle": SubResource("Animation_1u4g2"),
"start": SubResource("Animation_6b48i")
}

[node name="wood_drop" type="Area2D" groups=["Card", "Drop"]]
collision_layer = 8
script = ExtResource("1_c6iyp")

[node name="wood_sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_2r10a")

[node name="get_drop" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_bgbcu")

[node name="time_to_delete" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8wp76")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="time_to_delete" to="." method="_on_time_to_delete_timeout"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
